--- a/src/widget/pagination/PaginationWidget.css
+++ b/src/widget/pagination/PaginationWidget.css
@@ -12,3 +12,27 @@
 .emap_pagination_pageNoLink{
     display:initial;
 }
+.emap_pagination_pageDetailTD{
+    padding-left: 0px !important;
+    padding-right: 0px !important;
+}
+.emap_pagination_displayInline{
+    display: inline-block !important;
+}
+.emap_pagination_verticalAlign{
+    vertical-align: middle !important;
+}
+.emap_pagination_pageSizeInput{
+    width:50px !important;
+    height:25px !important;
+    padding:0px !important;
+}
+.emap_pagination_floatRight{
+    float:right !important;
+}
+.emap_pagination_pageNoCon{
+    display: inline-block !important;
+    padding-left:5px !important;
+}
+
+
